--- a/frontend/src/tailwind.css
+++ b/frontend/src/tailwind.css
@@ -1,12 +1,11 @@
 @import "tailwindcss";
 
 @plugin '../hero.ts';
-@config "../tailwind.config.js";
 @source '../node_modules/@heroui/theme/dist/**/*.{js,ts,jsx,tsx}';
 
 
 .button-base {
-  @apply bg-tertiary border border-neutral-600 rounded-xs;
+  @apply bg-gray-200 border border-neutral-600 rounded-xs;
 }
 
 .skeleton {
@@ -18,7 +17,7 @@
 }
 
 .heading {
-  @apply text-[28px] leading-8 -tracking-[0.02em] font-bold text-content-2;
+  @apply text-[28px] leading-8 -tracking-[0.02em] font-bold text-gray-900;
 }
 
 .loader {
