--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,9 +1,10 @@
 @import "tailwindcss";
 @import "tw-animate-css";
 @import '@fontsource-variable/host-grotesk';
+@import '@fontsource-variable/dancing-script';
+
 
 @custom-variant dark (&:is(.dark *));
-
 
 @source "./app/**/*.{js,ts,jsx,tsx,mdx}";
 @source "./components/**/*.{js,ts,jsx,tsx,mdx}";
@@ -247,4 +248,13 @@ code {
   --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
   --color-sidebar-border: var(--sidebar-border);
   --color-sidebar-ring: var(--sidebar-ring);
+}
+
+@layer base {
+  * {
+    @apply border-border outline-ring/50;
+  }
+  body {
+    @apply bg-background text-foreground;
+  }
 }
